--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -44,6 +44,9 @@
 
 	.autoCom {background: black;position: absolute;width: calc(100% - 72.2%);margin: 0 auto;left: 47.6%; top: 56px;	padding: 10px;	z-index: 1;	}
 	.modal-dialog{width: 600px;}
+	.toNv ul.navbar-nav.ml-auto {
+		right: 8%;
+	}
 	
 	
 }
@@ -103,11 +106,12 @@
 	}
 	.toNv ul.navbar-nav.ml-auto {
 	
-		right: 4%;
+		right: 6%;
 	
 	}
 	header {height: 114px;}
 	.modal-title {	font-size: 24px;}
+	.searchSec .ant-select-selector {min-width: 332px;}
 
 }
 
@@ -133,13 +137,14 @@
 	.navbarNavDropdown{
 		width: 75%;
 	}
+	.searchSec .ant-select-selector {
+		min-width: 242px;
+	}
 
 }
 
 @media (max-width: 1024px) {
-	.secondNavbar .navbar-nav {
-		top: 10px;
-	}
+	
 
 	table.cartSection.cartth tr th:first-child {
 		width: 40%;
@@ -225,7 +230,7 @@
 		display: block;
 		position: relative;
 		right: 20px;
-		top: 15px;
+		top: 16px;
 	}
 
 	.toNv {
@@ -235,7 +240,7 @@
 	ul.navbar-nav.mobileOnly {
 		display: none;
 	}
-
+	
 	.navbar-collapse.mobileOnly.collapse.show {
 		/* display: block; */
 		position: absolute;
@@ -264,7 +269,7 @@
 
 	button.sunMoonBtn {
 		left: 87%;
-		top: -217px;
+		top: -224px;
 	}
 
 	.light button.sunMoonBtn img {
@@ -297,17 +302,18 @@
 		margin: 0 auto;
 	}
 
-	.featuredAuctions_Slide.delair .card_postImg {
-		/* display: contents; */
-		width: unset;
-		height: unset;
-	}
-	.mobile-mt-50 {
-		margin-bottom: 100px !important;
-	}
+	.featuredAuctions_Slide.delair .card_postImg {	width: unset;height: unset;	}
+	.mobile-mt-50 {	margin-bottom: 100px !important;}
+	a.navbar-brand {top: 12px;left: 22px;	z-index: 0;	}
+	.mobileOnlyHide { display: none;	}
+	.navbar-collapse.mobileOnly.collapse.show {	padding-top: 20px;	padding-left: 2%;}
 }
 
 @media (max-width: 860px) {
+	button.sunMoonBtn {
+		left: 87%;
+		top: -192px;
+	}
 	.dfk h5 {
 		font-size: 15px;
 	}
@@ -582,7 +588,8 @@
 	}
 
 	a.navbar-brand {
-		top: 0;
+		top: 25px;
+		position: fixed;
 	}
 
 	button.sunMoonBtn {
@@ -593,8 +600,8 @@
 		padding: 7px;
 		border-radius: 5px;
 		border: none;
-		top: -79px;
-		left: 76%;
+		top: -73px;
+		left: 75%;
 	}
 
 	.light button.sunMoonBtn {
@@ -645,6 +652,7 @@
 
 	h1 {font-size: 2.5em;}
 	.payTPop .modal-content {width: calc(80% - -67%);}
+	.navbar-expand-md .navbar-toggler {	top: 22px;	}
 }
 
 @media (max-width: 575px) {
