--- a/src/Assets/css/lightMode.css
+++ b/src/Assets/css/lightMode.css
@@ -75,4 +75,5 @@ body.light{  background-color: #fff; color: #000;}
 }
 .light .ant-select-dropdown { background-color: #fff;}
 .light .ant-select-item.ant-select-item-option{color: #000;}
+.light .topTile { background: #fff;}
 
