--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -4104,7 +4104,7 @@ a.searchList {
 }
 
 .featuredAuctions_Slide.delair .card_post {
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: space-evenly !important;
   width: 70%;
@@ -4141,7 +4141,7 @@ a.searchList {
   width: 100%;
 }
 .featuredAuctions_Slide.delair .card_postImg.dlr {
-  width: 190px;
+  width: 100%;
   height: 130px;
 }
 .Latest_B {
@@ -4394,6 +4394,46 @@ input.ant-select-selection-search-input {
 
 .col-12.slider_ht {
   height: 550px;
+}
+.card_postImg.dlr img {
+  background: aliceblue;
+}
+
+.card_postImg.dlr .card_post {
+  padding: 3px;
+}
+.featuredAuctions_Slide.delair a .card_post {
+  padding: 10px;
+}
+.featuredAuctions_Slide.delair .card_postInfo {
+  padding: 25px 0px;
+}
+.card_postImg.dlr small {
+  position: absolute;
+  background-color: #000;
+  padding: 10px;
+  border-radius: 100px;
+  top: 3%;
+  right: 4px;
+}
+.infoCar table tr td {
+  padding: 10px;
+  border-right: 1px solid #423e3e;
+}
+.infoCar table tr {
+  border-bottom: 1px solid #413e3e;
+}
+.infoCar {
+  width: 39%;
+}
+.infoCar table tr td:last-child {
+  border: none;
+}
+.infoCar table tr:last-child {
+  border-bottom: 0;
+}
+.infoCar table tr:hover {
+  background: #3333333b;
 }
 
 @media (max-width: 860px) {
