--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -390,9 +390,14 @@
 }
 
 @media (max-width: 767px) {
-.infoCar {
-    width: 100%;
-}
+	.modal-dialog {	width: auto;}
+	.modal-header .close {top: -18px;  left: -1%;}
+	.fp {display: block;}
+	.modal-body,.modal-header {padding: 0rem;	}
+	.modal-body label {
+		font-size: 13px;
+	}
+	.infoCar { width: 100%;}
 	.featuredAuctions_Slide.delair .slick-list {	text-align: center;	}
 	.featuredAuctions_Slide.delair .card_postImg.dlr { margin: 0 auto;	}
 	.modal-title {
