--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -4488,11 +4488,24 @@ img.g3Logo.W {
   font-size: 20px;
 }
 .bg-pop .modal-content {
-  background-image: url('../images/se4g.png');
+  /* background-image: url('../images/se4g.png'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  width: fit-content;
 }
+.bg-pop .modal-dialog {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  justify-content: center;
+}
+.bg-pop .modal-header .close { top: -19px;}
+.ar .btn { margin: 5px;}
+
+.classifiedAdds .card_postImg { height: 150px;}
+.classifiedAdds .card_postInfo h4 { font-size: 14px;  font-weight: 300;}
+ul.labelList li { color: #f7931a;}
 
 
 @media (max-width: 860px) {
