--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -4505,7 +4505,8 @@ img.g3Logo.W {
 
 .classifiedAdds .card_postImg { height: 150px;}
 .classifiedAdds .card_postInfo h4 { font-size: 14px;  font-weight: 300;}
-ul.labelList li { color: #f7931a;}
+.classifiedAdds ul.labelList li { color: #f78c12;}
+.classifiedAdds ul.labelList li {  font-weight: 700;}
 
 
 @media (max-width: 860px) {
